--- a/views/index.ejs
+++ b/views/index.ejs
@@ -741,13 +741,13 @@
           </section> <!-- end worldwide news -->
 
           <!-- Pagination -->
-          <nav class="pagination">
+         <!-- <nav class="pagination">
             <span class="pagination__page pagination__page--current">1</span>
             <a href="#" class="pagination__page">2</a>
             <a href="#" class="pagination__page">3</a>
             <a href="#" class="pagination__page">4</a>
             <a href="#" class="pagination__page pagination__icon pagination__page--next"><i class="ui-arrow-right"></i></a>
-          </nav>
+          </nav>-->
 
         </div> <!-- end posts -->
 
