--- a/views/index.ejs
+++ b/views/index.ejs
@@ -158,7 +158,7 @@
           <!-- Socials -->
           <div class="col-lg-6" style="text-align: right;padding-top: 10px;">
             <!--<a href="#" class="visited-link"><i class="fa fa-envelope"></i> &nbsp;mail@goodmorning9ja.com</a>&nbsp;&nbsp;&nbsp;-->
-            <a href="#" class="visited-link"> For Advert <i class="fa fa-phone"></i> &nbsp;+234 809 6461 927</a>
+            <a href="#" class="visited-link">Advertise &nbsp;&nbsp;<i class="fa fa-phone"></i> &nbsp;+234 809 6461 927</a>
             <!--<div class="socials nav__socials socials--nobase socials--white justify-content-end"> 
               <a class="social social-facebook" href="#" target="_blank" aria-label="facebook">
                 <i class="ui-facebook"></i>
