--- a/views/index.ejs
+++ b/views/index.ejs
@@ -899,11 +899,12 @@
                   © 2018 GM9ja
                 </p>
                 <div class="socials socials--large socials--rounded mb-24">
-                  <a href="#" class="social social-facebook" aria-label="facebook"><i class="ui-facebook"></i></a>
-                  <a href="#" class="social social-twitter" aria-label="twitter"><i class="ui-twitter"></i></a>
+                  <a href="" class="social social-facebook" aria-label="facebook"><i class="ui-facebook"></i></a>
+                  <!-- https://web.facebook.com/Goodmorning9jacom-280876745828122 -->
+                  <!--<a href="#" class="social social-twitter" aria-label="twitter"><i class="ui-twitter"></i></a>
                   <a href="#" class="social social-google-plus" aria-label="google+"><i class="ui-google"></i></a>
                   <a href="#" class="social social-youtube" aria-label="youtube"><i class="ui-youtube"></i></a>
-                  <a href="#" class="social social-instagram" aria-label="instagram"><i class="ui-instagram"></i></a>
+                  <a href="#" class="social social-instagram" aria-label="instagram"><i class="ui-instagram"></i></a>-->
                 </div>
               </aside>
             </div>
