--- a/views/index.ejs
+++ b/views/index.ejs
@@ -85,7 +85,7 @@
           <a href="/latest" class="sidenav__menu-url">Latest News</a>
         </li>
         <li>
-          <a href="#" class="sidenav__menu-url">Politics</a>
+          <a href="/politics" class="sidenav__menu-url">Politics</a>
         </li>        
 
         <!-- Categories -->
@@ -110,7 +110,7 @@
           <a href="/world" class="sidenav__menu-url">World</a>
         </li>
         <li>
-          <a href="/fashion" class="sidenav__menu-url">Fashion</a>
+          <a href="/football" class="sidenav__menu-url">Football</a>
         </li>
       </ul>
     </nav>
@@ -359,10 +359,9 @@
                   <a href="/world">World</a>
                   
                 </li>
-                <!--<li class="nav__dropdow" ng-class="{'active': pageType == 'fashion'}">
-                  <a href="/fashion">Fashion</a>
-                  
-                </li>-->
+                <li class="nav__dropdow" ng-class="{'active': pageType == 'football'}">
+                  <a href="/football">Football</a>                  
+                </li>
                <!-- <li class="nav__dropdow">
                   <a href="">Career</a>
                   <!--<ul class="nav__dropdown-menu">
