--- a/views/index.ejs
+++ b/views/index.ejs
@@ -86,7 +86,7 @@
 
       .title-wrap {
         /*display: none;*/
-         height: 135px
+         height: 135px;
       }
 
       .trending-now__label {
