google adsense add

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,6 +33,14 @@
     gtag('config', 'UA-122985010-1');
   </script>
 
+  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <script>
+    (adsbygoogle = window.adsbygoogle || []).push({
+      google_ad_client: "ca-pub-7029454675847510",
+      enable_page_level_ads: true
+    });
+  </script>
+
   <!-- Lazyload (must be placed in head in order to work) -->
   <script src="/assets/js/lazysizes.min.js"></script>
 
