--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,7 @@
   <!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
   <meta name="viewport" content="width=device-width, initial-scale=0.7, shrink-to-fit=yes" />
   <meta name="description" content="">
+  <meta name="fragment" content="!" />
 
   <!-- Google Fonts -->
   <link href='https://fonts.googleapis.com/css?family=Montserrat:400,600,700%7CSource+Sans+Pro:400,600,700' rel='stylesheet'>
@@ -656,8 +657,8 @@
               <!--<a href="#" class="all-posts-url">View All</a>-->
               <input type="text" name="" class="filter-input" ng-model="news" placeholder="Filter by headline keywords, news source or date (mm/dd)">
 
-              <a href="" ng-click="refresh()" title="load new headlines" class="btn btn-primary btn-sm refresh"><i class="fa fa-refresh fa-pulse fa-1x fa-fw" style="font-size: 14px;color: orange"></i> Refresh</a>
-               <a href="" ng-click="getLink()" target="_blank" data-action="share/whatsapp/share" class="btn btn-simple btn-sm share-whatsapp"><i class="fa fa-share"></i> <i class="fa fa-heart" style="color: orange"></i> on whatsapp</a>
+              <a href="" ng-click="refresh()" title="load new headlines" class="btn btn-primary btn-sm refresh"><i class="fa fa-refresh" style="font-size: 14px;color: orange"></i> Refresh</a>
+               <a href="" ng-click="getLink()" class="btn btn-simple btn-sm share-whatsapp"><i class="fa fa-share"></i> <i class="fa fa-heart" style="color: orange"></i> whatsapp web</a>
             </div>
             
             
@@ -1030,14 +1031,46 @@
     <div id="back-to-top">
       <a href="#top" aria-label="Go to top"><i class="ui-arrow-up"></i></a>
     </div>
+  
+
+    <!-- <div class="modal fade" id="accessl" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true" ng-controller="shareController">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Change Password </h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body" style="padding-right: 40px">
+          <div id="shareplace">
+            
+          </div>
+        </div>
+       
+      </div>
+    </div>
+  </div>-->
 
   </main> <!-- end main-wrapper -->
+ <!-- <script type="text/ng-template" id="share.html">
+       <div class="modal fade">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+          
+            dsdsdsds ds
+            
+            </div>
+        </div>
+      </div>
+   </script>   -->   
 
   <!-- angular code -->
-  <script src="/assets/js/angular-1.7.2/angular-resource.min.js"></script>
-  <script src="/assets/js/client.js"></script>  
+  <script src="/assets/js/angular-1.7.2/angular-resource.min.js"></script>  
   <script type="text/javascript" src="/assets/js/moment.min.js"></script>
   <script src="/assets/js/angular-moment.min.js"></script>  
+  <script src="/assets/js/modalService.js"></script>
   <script src="/assets/js/client.js"></script>
   <!-- jQuery Scripts -->
   <script src="/assets/js/jquery.min.js"></script>
@@ -1049,6 +1082,8 @@
   <script src="/assets/js/jquery.newsTicker.min.js"></script>  
   <script src="/assets/js/modernizr.min.js"></script>
   <script src="/assets/js/scripts.js"></script>
+  
+
 
 </body>
 
