--- a/views/index.ejs
+++ b/views/index.ejs
@@ -464,7 +464,12 @@
 
       </div>
     </header> <!-- end navigation -->
-  
+    <div class="container pt-2">
+      <p class="p-3 text-mute" style="width: 68%;margin: 0 auto;border:1px solid grey;">
+          Our team of engineers are working to establish more news channels. Please note that you can share on whatsapp if you
+          have the web version. Sometimes, sharing may not work with whatsapp mobile app.
+      </p>
+    </div>
 
     <!-- Trending Now -->
     <div class="container" >
