--- a/views/index.ejs
+++ b/views/index.ejs
@@ -464,12 +464,7 @@
 
       </div>
     </header> <!-- end navigation -->
-    <div class="container pt-2">
-      <!--<p class="p-3 text-mute" style="width: 68%;margin: 0 auto;border:1px solid grey;">
-          Our team of engineers are working to establish more news channels. Please note that you can share on whatsapp if you
-          have the web version. Sometimes, sharing may not work with whatsapp mobile app.
-      </p>-->
-    </div>
+   
 
     <!-- Trending Now -->
     <div class="container" >
@@ -684,6 +679,7 @@
               </ul>
 
             </article>
+
 
            <!-- <article class="entry card post-list">
               <div class="entry__img-holder post-list__img-holder card__img-holder" style="background-image: url(/assets/img/content/list/list_post_2.jpg)">
@@ -952,7 +948,13 @@
           </aside>--> <!-- end widget recommended (rating) -->
         </aside> <!-- end sidebar 1 -->
       </div> <!-- content secondary -->      
-      
+      <div class="container pt-2">
+        <p class="p-3 text-mute" style="width: 68%;margin: 0 auto;border:1px solid grey;">
+          Our team of engineers are working to establish more news channels. Please note that you can share on whatsapp if you
+          have the web version. Sometimes, sharing may not work with whatsapp mobile app.
+        </p>
+      </div>
+
 
     </div> <!-- end main container -->
 
