--- a/views/index.ejs
+++ b/views/index.ejs
@@ -949,9 +949,8 @@
         </aside> <!-- end sidebar 1 -->
       </div> <!-- content secondary -->      
       <div class="container pt-2">
-        <p class="p-3 text-mute" style="width: 68%;margin: 0 auto;border:1px solid grey;">
-          Our team of engineers are working to establish more news channels. Please note that you can share on whatsapp if you
-          have the web version. Sometimes, sharing may not work with whatsapp mobile app.
+        <p>Latest headlines from online news sources in Nigeria and abroad. See latest headlines from newspaper sources in Nigeria - Punch, vanguard, Daily Post, Guardian, This Day, Premium Times, Independence newspapers, Sahara Reporters, BBC, CNN,  etc. <br>
+         Latest Nigeria news, Politics, Football, Business, Lifestyle, Entertainment, world, Technology.
         </p>
       </div>
 
