changes for mobile

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -57,6 +57,7 @@
   <style type="text/css">
     .visited-link {
       color: orange!important;
+      font-size: 12px
     }
 
     .filter-input {
@@ -116,6 +117,14 @@
 
       .sidebar {
         margin-top: -80px!important; 
+      }
+
+      .share-whatsapp {
+        display: none;
+      }
+
+      .fa-heart-o {
+        display: none;
       }
     }
   </style>
