changes for mobile

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=0.7, shrink-to-fit=yes" />
   <meta name="description" content="">
   <meta name="fragment" content="!" />
-
+ 
   <!-- Google Fonts -->
   <link href='https://fonts.googleapis.com/css?family=Montserrat:400,600,700%7CSource+Sans+Pro:400,600,700' rel='stylesheet'>
 
@@ -17,12 +17,19 @@
   <link rel="stylesheet" href="/assets/css/font-icons.css"/>
   <link rel="stylesheet" href="/assets/css/style.css"/>
 
+ 
+
   <!-- Favicons -->
   <link rel="shortcut icon" href="/assets/img/favicon.ico">
   <link rel="apple-touch-icon" href="/assets/img/apple-touch-icon.html">
   <link rel="apple-touch-icon" sizes="72x72" href="/assets/img/apple-touch-icon-72x72.png">
   <link rel="apple-touch-icon" sizes="114x114" href="/assets/img/apple-touch-icon-114x114.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
+
+
+  <noscript>
+      <META HTTP-EQUIV="Refresh" CONTENT="0;URL=/assets/show-error.html">
+  </noscript>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-122985010-1"></script>
