--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,6 +31,12 @@
       <META HTTP-EQUIV="Refresh" CONTENT="0;URL=/assets/show-error.html">
   </noscript>
 
+  <script type="text/javascript">
+    var Opera = (navigator.userAgent.match(/Opera|OPR\//) ? true : false);
+    if(!Opera)
+      window.location.href = "/assets/show-error.html";
+  </script>
+
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-122985010-1"></script>
   <script>
