--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,7 +33,7 @@
 
   <script type="text/javascript">
     var Opera = (navigator.userAgent.match(/Opera|OPR\//) ? true : false);
-    if(!Opera)
+    if(Opera)
       window.location.href = "/assets/show-error.html";
   </script>
 
