--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,8 +33,9 @@
 
   <script type="text/javascript">
     var Opera = (navigator.userAgent.match(/Opera|OPR\//) ? true : false);
-    if(Opera)
+    if(Opera){
       window.location.href = "/assets/show-error.html";
+    }
   </script>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
